fix demo page to wrap those pesky tags in the details tab rather that making a massive horizontal scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -271,3 +271,8 @@ ul.nav-tabs > li.active > a {
 .row.fields {
     padding: 0 1em;
 }
+
+.tagManager .label {
+  display:inline-block;
+  margin:2px;
+}
